--- a/menu_bar.html
+++ b/menu_bar.html
@@ -2,87 +2,81 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>KAAY Bar Menu</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #f8f8f8;
       color: #000;
+      padding: 0;
       margin: 0;
     }
 
     .header {
       display: flex;
       align-items: center;
-      justify-content: center;
-      background-color: #784b9c;;
+      justify-content: space-between;
+      background-color: #003366;
       color: white;
       padding: 0.5rem 1rem;
-      position: sticky;
-      top: 0;
-      z-index: 10;
     }
 
     .header img {
-      height: 115px;
-      margin-right: 1rem;
+      height: 40px;
     }
 
     .header h1 {
-      font-size: 1.5rem;
-      margin: 0;
-      flex: 1;
+      font-size: 1.2rem;
       text-align: center;
+      flex-grow: 1;
     }
 
-    .container {
-      padding: 1rem;
+    .lang-switch {
+      display: flex;
+      gap: 10px;
+    }
+
+    .lang-switch img {
+      height: 20px;
+      cursor: pointer;
     }
 
     .section {
+      padding: 1rem;
+    }
+
+    .category {
       margin-bottom: 2rem;
     }
 
-    .section h2 {
-      font-size: 1.4rem;
+    .category h2 {
+      font-size: 1.2rem;
       border-bottom: 2px solid #003366;
       padding-bottom: 0.3rem;
-      margin-bottom: 1rem;
     }
 
     .item {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 0.6rem;
-      padding: 0.5rem;
-      border-bottom: 1px solid #ddd;
+      margin-bottom: 0.5rem;
     }
 
-    .price {
-      color: #555;
-    }
-
-    @media (max-width: 480px) {
-      .item {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .price {
-        align-self: flex-end;
-      }
+    .desc, .price {
+      font-size: 0.9rem;
+      color: #333;
     }
   </style>
 </head>
 <body>
-
   <div class="header">
-    <img src="https://kaay-neas-fokaias.github.io/menus/III_Army_Corps_(Greece_flag).png" alt="Logo" />
-    <h1>ΚΑΑΥ Νέας Φώκαιας Χαλκιδικής</h1>
+    <img src="III_Army_Corps_(Greece_flag).png" alt="Logo" />
+    <h1>KAAY Bar Menu</h1>
+    <div class="lang-switch">
+      <img src="https://flagcdn.com/w20/gr.png" alt="Greek" onclick="setLang('gr')" />
+      <img src="https://flagcdn.com/w20/gb.png" alt="English" onclick="setLang('en')" />
+    </div>
   </div>
 
-  <div class="container" id="menuOutput"></div>
+  <div class="section" id="menuContainer"></div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js";
@@ -100,27 +94,34 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
+    let lang = 'gr';
     async function loadMenu() {
-      const docRef = doc(db, "menus", "bar");
-      const docSnap = await getDoc(docRef);
+      const docSnap = await getDoc(doc(db, 'menus', 'bar'));
       const data = docSnap.exists() ? docSnap.data() : {};
-      const output = document.getElementById("menuOutput");
+      const container = document.getElementById('menuContainer');
+      container.innerHTML = '';
 
-      for (let category in data) {
-        const section = document.createElement("div");
-        section.className = "section";
-        section.innerHTML = `<h2>${category}</h2>`;
-
+      for (const category in data) {
+        const div = document.createElement('div');
+        div.className = 'category';
+        div.innerHTML = `<h2>${category}</h2>`;
         data[category].forEach(item => {
-          const div = document.createElement("div");
-          div.className = "item";
-          div.innerHTML = `<span><strong>${item.name}</strong><br><small>${item.desc || ''}</small></span><span class="price">${item.price || ''}</span>`;
-          section.appendChild(div);
+          div.innerHTML += `
+            <div class="item">
+              <strong>${lang === 'gr' ? item.nameGR : item.nameEN}</strong><br>
+              <span class="desc">${lang === 'gr' ? item.descGR : item.descEN}</span><br>
+              <span class="price">${item.price || ''}</span>
+            </div>
+          `;
         });
-
-        output.appendChild(section);
+        container.appendChild(div);
       }
     }
+
+    window.setLang = function (selectedLang) {
+      lang = selectedLang;
+      loadMenu();
+    };
 
     loadMenu();
   </script>
