--- a/menu_bar.html
+++ b/menu_bar.html
@@ -111,13 +111,13 @@
 <body>
   <div class="header">
     <img src="III_Army_Corps_(Greece_flag).png" alt="Logo" />
-    <h1>KAAY Bar Menu</h1>
+    <h1>KAAY <br> Νέας Φώκαιας</h1>
     <div class="lang-switch">
         <img src="https://flagcdn.com/gr.svg" alt="Greek" id="langGR" />
         <img src="https://flagcdn.com/gb.svg" alt="English" id="langEN" />
     </div>
   </div>
-
+  <h1> Menu </h1>
   <div class="section" id="menuContainer"></div>
 
   <script type="module">
