--- a/menu_bar.html
+++ b/menu_bar.html
@@ -117,7 +117,8 @@
         <img src="https://flagcdn.com/gb.svg" alt="English" id="langEN" />
     </div>
   </div>
-  <h1> Menu </h1>
+    <h1 style="justify-self: center;"> Menu </h1>
+
   <div class="section" id="menuContainer"></div>
 
   <script type="module">
