--- a/menu_bar.html
+++ b/menu_bar.html
@@ -118,7 +118,7 @@
     </div>
   </div>
   <center>
-    <h1>Menu </h1>
+    <h1>Menu Bar</h1>
 </center>
   <div class="section" id="menuContainer"></div>
 
