--- a/admin.html
+++ b/admin.html
@@ -143,7 +143,26 @@
     <button class="btn" onclick="closeEdit()">Cancel</button>
   </div>
 
-  <script type="module">
+  <div id="loginForm" style="max-width: 300px; margin: 2rem auto;">
+  <h2>Login</h2>
+  <div class="form-group">
+    <label>Email</label>
+    <input type="email" id="email" />
+  </div>
+  <div class="form-group">
+    <label>Password</label>
+    <input type="password" id="password" />
+  </div>
+  <button class="btn" onclick="login()">Login</button>
+</div>
+
+<div id="adminPanel" style="display:none;">
+  <!-- EVERYTHING already in your <body> (admin panel UI) goes here -->
+  <!-- Add this button at the top to allow logout -->
+  <div style="text-align: right; margin-bottom: 1rem;">
+    <button class="btn" onclick="logout()">Logout</button>
+  </div>
+  
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js";
   import { getFirestore, doc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-firestore.js";
